<resources>
    <string name="app_name">EatThatsIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation Entries -->

    <string name="menu_person">Person</string>
    <string name="menu_benedict">Benedict</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_settings">Settings</string>


    <!-- Benedict Fragment -->

    <string name="benedict_gender">Gender</string>
    <string name="benedict_weight">Weight</string>
    <string name="benedict_weight_volume">kg</string>
    <string name="benedict_height">Height</string>
    <string name="benedict_height_volume">cm</string>
    <string name="benedict_age">Age</string>
    <string name="benedict_age_volume">years</string>
    <string name="benedict_pal">PAL</string>
    <string name="benedict_spinner_text">Formula</string>

    <string-array name="benedict_gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="short_benedict_formula_array">
        <item>Average of all</item>
        <item>Harris-Benedict</item>
        <item>Roza and Shizgal</item>
        <item>Dr. Miffin and St.Jeor</item>
    </string-array>

    <string-array name="long_benedict_formula_array">
        <item>Average of all the different equations</item>
        <item>Original Harris-Benedict equation published in 1918</item>
        <item>Equation revised by Roza and Shizgal in 1984</item>
        <item>Equation revised by Dr. Miffin and St.Jeor in 1990</item>
    </string-array>

    <!-- Counter Fragment -->

    <string name="numbercounter_minus">Decrement the counter</string>
    <string name="numbercounter_subtract">Decrement the counter with a custom value</string>
    <string name="numbercounter_plus">Increment the counter</string>
    <string name="numbercounter_append">Increment the counter with a custom value</string>
</resources>
