<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="vm"
            type="themulti0.eatthatsit.ui.home.BenedictViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="30dp"
            android:text="@string/benedict_weight"
            app:layout_constraintEnd_toStartOf="@+id/inputWeight"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textKg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="18dp"
            android:text="@string/benedict_weight_volume"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/inputWeight"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="102dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="30dp"
            android:text="@string/benedict_height"
            app:layout_constraintEnd_toStartOf="@+id/inputHeight"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textWeight" />

        <TextView
            android:id="@+id/textCm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="18dp"
            android:text="@string/benedict_height_volume"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/inputHeight"
            app:layout_constraintTop_toBottomOf="@+id/textKg" />

        <EditText
            android:id="@+id/inputHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="102dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputWeight" />

        <TextView
            android:id="@+id/textAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="30dp"
            android:text="@string/benedict_age"
            app:layout_constraintEnd_toStartOf="@+id/inputAge"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHeight" />

        <TextView
            android:id="@+id/textYears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="18dp"
            android:text="@string/benedict_age_volume"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/inputAge"
            app:layout_constraintTop_toBottomOf="@+id/textCm" />

        <EditText
            android:id="@+id/inputAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="102dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputHeight" />

        <TextView
            android:id="@+id/textPal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="30dp"
            android:text="@string/benedict_pal"
            app:layout_constraintEnd_toStartOf="@+id/inputPal"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textAge" />

        <EditText
            android:id="@+id/inputPal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="102dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputAge" />

        <TextView
            android:id="@+id/textSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="30dp"
            android:text="@string/benedict_spinner_text"
            app:layout_constraintEnd_toStartOf="@+id/formula_spinner"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPal" />

        <Spinner
            android:id="@+id/formula_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="102dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="50dp"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputPal" />

        <TextView
            android:id="@+id/viewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="142dp"
            android:text="@{vm.result}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.284"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculateButton" />

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="106dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="96dp"
            android:text="Calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formula_spinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>