<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="themulti0.eatthatsit.ui.counter.CounterViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/counterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.counterName}"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/minus_button"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/numbercounter_minus"
            android:hapticFeedbackEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/counter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/counterTextView"
            app:srcCompat="@drawable/ic_remove_black_24dp" />

        <ImageButton
            android:id="@+id/subtract_button"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:contentDescription="@string/numbercounter_subtract"
            android:hapticFeedbackEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/minus_button"
            app:layout_constraintTop_toTopOf="@+id/minus_button"
            app:srcCompat="@drawable/ic_indeterminate_check_box_black_24dp" />

        <EditText
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:maxWidth="120dp"
            android:inputType="numberDecimal"
            android:text="@={vm.counter}"
            app:layout_constraintEnd_toStartOf="@+id/plus_button"
            app:layout_constraintStart_toEndOf="@+id/minus_button"
            app:layout_constraintTop_toBottomOf="@+id/counterTextView"
            app:layout_constraintWidth_max="wrap" />

        <ImageButton
            android:id="@+id/plus_button"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/numbercounter_plus"
            android:hapticFeedbackEnabled="true"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/counter"
            app:layout_constraintTop_toBottomOf="@+id/counterTextView"
            app:srcCompat="@drawable/ic_add_black_24dp" />

        <ImageButton
            android:id="@+id/append_button"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:contentDescription="@string/numbercounter_append"
            android:hapticFeedbackEnabled="true"
            android:scaleType="center"
            app:layout_constraintStart_toEndOf="@+id/plus_button"
            app:layout_constraintTop_toTopOf="@+id/plus_button"
            app:srcCompat="@drawable/ic_add_box_black_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>